--- a/trunk/ressourcen/jd/languages/Nederlands.lng
+++ b/trunk/ressourcen/jd/languages/Nederlands.lng
@@ -1,3 +1,5 @@
+$translater$ = ChangeMe
+$version$ = $Revision$
 addons.jdshutdown.menu.disable = Na Download Systeem Afsluiten Deactiveren
 addons.jdshutdown.menu.enable = Na Download Systeem Afsluiten Activeren
 addons.jdshutdown.statusmessage.disabled = JDownloader zal het Systeem na het Downloaden NIET afsluiten.
@@ -1571,8 +1573,8 @@ train.choose.folder = Kies een bestandsmap uit
 train.chooser.title = jDownloader :: Train All
 train.method = Kies een methode uit:
 wrapper.webupdate.updatefile = Update Plugin %s
-﻿addons.jdlowspeed.statusmessage.enabled = Lage Snelheiddetectie ingeschakeld
-﻿gui.downloadlink.finished = [klaar]
-﻿modules.reconnect.types.clr = CLR Script
-﻿﻿action.passwordlist.name = Paswoord lijst bewerken
-﻿﻿addons.jdlowspeed.statusmessage.disabled = Lage Snelheid detectie uitschakelen
+addons.jdlowspeed.statusmessage.enabled = Lage Snelheiddetectie ingeschakeld
+gui.downloadlink.finished = [klaar]
+modules.reconnect.types.clr = CLR Script
+action.passwordlist.name = Paswoord lijst bewerken
+addons.jdlowspeed.statusmessage.disabled = Lage Snelheid detectie uitschakelen
