--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -85,6 +85,8 @@ gui.btn_ok = OK
 gui.btn_save = Speichern
 gui.btn_select = auswählen
 gui.btn_settings = Einstellungen
+gui.btn_start = Start
+gui.btn_stop = Stop
 gui.btn_yes = Ja
 gui.captchawindow.askforinput = Bitte eingeben!
 gui.captchawindow.title = jAntiCaptcha aktiv!
@@ -172,12 +174,14 @@ gui.config.gui.disabledialogs = Bestätigungsdialoge abschalten
 gui.config.gui.disabletooltipps = ToolTipps der DownloadListe abschalten
 gui.config.gui.extended = Erweiterte Einstellungen
 gui.config.gui.language = Sprache
+gui.config.gui.languagefileinfo = Momentane Sprachdatei: %s übersetzt von %s in Version %s
 gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus überprüfen (Verfügbarkeitscheck)
 gui.config.gui.look.tab = Anzeige & Bedienung
 gui.config.gui.plaf = Style (Neustart nötig)
 gui.config.gui.showsplash = Splashscreen beim Start zeigen
 gui.config.gui.soundtheme = Soundtheme
 gui.config.gui.theme = Theme
+gui.config.hjsplit.overwrite = Überschreibe existierende Dateien
 gui.config.hjsplit.remove_merged = Lösche Archiv nach dem Zusammenfügen
 gui.config.jac.column.method = Methode
 gui.config.jac.column.use = Verwenden
@@ -893,8 +897,6 @@ plugins.optional.jdlowspeed.maxspeed = Maximale Internetgeschwindigkeit in kb/s 
 plugins.optional.jdlowspeed.minspeed = Mindestgeschwindigkeit für einen Download in kb/s
 plugins.optional.jdlowspeed.name = LowSpeed Erkennung
 plugins.optional.jdlowspeed.rsonly = Nur Raidshare überwachen
-plugins.optional.jdreconnectrecorder.name = ReconnectRecorder
-plugins.optional.jdrr.port = Port
 plugins.optional.jdshutdown.name = JDShutdown
 plugins.optional.jdunrar.askforpassword = Passwort für %s?
 plugins.optional.jdunrar.config.advanced = Erweiterte Einstellungen
@@ -939,6 +941,7 @@ plugins.optional.langfileeditor.keychart.done = Fertig
 plugins.optional.langfileeditor.keychart.missing = Fehlend
 plugins.optional.langfileeditor.keychart.old = Vermutlich veraltet
 plugins.optional.langfileeditor.languagefile = Language File: 
+plugins.optional.langfileeditor.languagefileinfo = <Language File Information>
 plugins.optional.langfileeditor.languagefilevalue = Language File Wert
 plugins.optional.langfileeditor.name = JDLangFileEditor
 plugins.optional.langfileeditor.new = Neu
