--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -164,7 +164,7 @@ gui.config.general.todowithdownloads = Entferne fertig gestellte Downloads ...
 gui.config.general.todowithdownloads.atstart = beim Programstart
 gui.config.general.todowithdownloads.immediate = sofort
 gui.config.general.todowithdownloads.never = nicht
-gui.config.general.todowithdownloads.packageready = wenn Paket komplett ist
+gui.config.general.todowithdownloads.packageready = Gleichzeitiges Downloaden und auf die Festplatte schreiben
 gui.config.general.webupdate.auto = automatisch, ohne Nachfrage ausführen
 gui.config.general.webupdate.disable = Update nur manuell durchführen
 gui.config.gui.autopackagelimit = Schwelle der Auto. Paketverwaltung.
@@ -187,6 +187,9 @@ gui.config.jac.column.method = Methode
 gui.config.jac.column.use = Verwenden
 gui.config.jac.status.auto = Automatische Erkennung
 gui.config.jac.status.noauto = Manuelle Eingabe
+gui.config.jdrr.close = Schließen
+gui.config.jdrr.reconnectfaild = Reconnect fehlgeschlagen
+gui.config.jdrr.savereconnect = Der Reconnect war erfolgreich möchten sie jetzt speichern?
 gui.config.liveheader.autoconfig = Router automatisch erkennen
 gui.config.liveheader.btnfindip = Router IP ermitteln
 gui.config.liveheader.dialog.importrouter = Router importieren
@@ -782,6 +785,7 @@ plugins.container.exit = Abgeschlossen. %s Links gefunden
 plugins.container.exit.error = Container-Fehler: %s
 plugins.container.found = Verarbeite %s Links
 plugins.container.open = Container öffnen
+plugins.decrypt.brazil-series.com1 = Download Format: Nur Avi ohne Untertitel
 plugins.decrypt.cryptitcom.password = Ordner ist Passwortgeschützt. Passwort angeben:
 plugins.decrypt.general.captchacodewrong = Captcha Code falsch
 plugins.decrypt.general.hosterselection = Hoster Auswahl
@@ -804,6 +808,8 @@ plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
 plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
 plugins.host.fastload.getticketmsg = Hole FastLoad-Ticket!
+plugins.host.fastload.ticketmessage = Kaufen Sie sich ein Fastloadspeedticket um die Geschwindigkeit auf 300kb/s zu erhähen
+plugins.host.fastload.wait_ticketmessage = Warten auf Speedticket
 plugins.host.gigasize.freeaccount.pass = Passwort
 plugins.host.gigasize.freeaccount.use = FreeAccount benutzen
 plugins.host.gigasize.freeaccount.user = eMail
@@ -1066,6 +1072,8 @@ plugins.trayicon.popup.menu.toggleclipboard = Zwischenablage an/aus
 plugins.trayicon.popup.menu.togglereconnect = Reconnect an/aus
 plugins.trayicon.popup.menu.update = JD aktualisieren
 plugins.trayicon.popup.title = JDownloader
+routerinfocollector.dialog.msg = <b>Um die automatische Routererkennung zu verbessern sammeln wir Routerinformationen!</b><br>Wenn sie damit einverstanden sind die Informationen aus den Details an unseren Server zu übermitteln bestätigen sie mit ja!
+routerinfocollector.dialog.title = Helfen sie die Routererkennung zu verbessern
 showcaptcha.choose.file = Wählen sie eine Bilddatei aus
 showcaptcha.chooser.title = jDownloader :: Show Captcha
 sys.ask.rlyclose = Wollen Sie jDownloader wirklich schließen?
