--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -119,7 +119,7 @@ gui.config.download.chunks = Anzahl der Verbindungen/Datei (Chunkload)
 gui.config.download.connectionlost.wait = Wartezeit nach Verbindungsabbruch [s]
 gui.config.download.crc = SFV/CRC Check wenn möglich durchführen
 gui.config.download.download.tab = Downloadsteuerung
-gui.config.download.downloadthread = Gleichzeitigs Downloaden und auf die Festplatte schreiben
+gui.config.download.downloadthread = Gleichzeitiges Downloaden und auf die Festplatte schreiben
 gui.config.download.ipcheck.disable = IP Überprüfung deaktivieren (nicht empfohlen!)
 gui.config.download.ipcheck.externalinterval = Zeitabstand der externen IP Überprüfung [sec]
 gui.config.download.ipcheck.mask = Erlaubte IP
@@ -313,6 +313,11 @@ gui.fengshuiconfig.general.tooltip = Zielordner und Sprache können hier eingest
 gui.fengshuiconfig.languages.restartwarning = Für eine Sprachänderung muss JDownloader neu gestartet werden. Jetzt neu starten?
 gui.fengshuiconfig.plugin.host.tooltip = <html>Falls Sie einen Premiumaccount haben können Sie hier Benutzerdaten<br> eingeben
 gui.fengshuiconfig.reconnect.tooltip = <html> Manchmal ist es nötig eine neue IP zu bekommen um Wartezeiten zu überspringen!
+gui.fengshuiconfig.routerip = Raouter-Ip
+gui.fengshuiconfig.routername = Routername
+gui.fengshuiconfig.routerpassword = Passwort
+gui.fengshuiconfig.testsettings = Einstellungen testen
+gui.fengshuiconfig.username = Benutzername
 gui.fengshuiconfig.wikiurl = http://wiki.jdownloader.org/index.php?title=DE:fengshui:
 gui.javacheck.html = <link href='http://jdownloader.org/jdcss.css' rel='stylesheet' type='text/css' /><div style='width:534px;height;200px'><h2>Sie verwenden eine falsche Javaversion. Bitte das original Sun-Java verwenden. JDownloader trotzdem starten?<table width='100%%'><tr><th colspan='2'>Ihre Java Version:</th></tr><tr><th>Runtime Name</th><td>%s</td></tr><tr><th>Runtime Version</th><td>%s</td></tr></table></div>
 gui.javacheck.title = Falsche Javaversion
@@ -589,7 +594,7 @@ gui.treetable.header_5.progress = Fortschritt
 gui.treetable.packagestatus.links_active = aktiv
 gui.treetable.part.label = Datei
 gui.treetable.part.label_package = Paket
-gui.treetable.part.label_update = Update
+gui.treetable.part.label_update = Aktuallisieren
 gui.treetable.parts = Teil(e)
 gui.warning.reconnect.close = Fenster schließen
 gui.warning.reconnect.hasbeendisabled = Reconnect deaktiviert!
@@ -1045,11 +1050,11 @@ plugins.optional.trayicon.startorstop = Start/Stop
 plugins.optional.trayicon.stopafter = Nach diesem Download anhalten
 plugins.optional.trayicon.tooltipp = Tooltipp aktiv:
 plugins.optional.trayicon.update = Update
-plugins.optional.webinterface.connections = Max. verbindungen
+plugins.optional.webinterface.connections = Max. Verbindungen
 plugins.optional.webinterface.https = Use HTTPS
 plugins.optional.webinterface.loginname = Login Name
 plugins.optional.webinterface.loginpass = Login Passwort
-plugins.optional.webinterface.name = WebInterface
+plugins.optional.webinterface.name = Web-Schnittstelle
 plugins.optional.webinterface.needlogin = Authentifikation benötigt
 plugins.optional.webinterface.port = Port
 plugins.optional.webinterface.refresh = AutoRefresh
@@ -1075,7 +1080,7 @@ plugins.trayicon.popup.title = JDownloader
 routerinfocollector.dialog.msg = <b>Um die automatische Routererkennung zu verbessern sammeln wir Routerinformationen!</b><br>Wenn sie damit einverstanden sind die Informationen aus den Details an unseren Server zu übermitteln bestätigen sie mit ja!
 routerinfocollector.dialog.title = Helfen sie die Routererkennung zu verbessern
 showcaptcha.choose.file = Wählen sie eine Bilddatei aus
-showcaptcha.chooser.title = jDownloader :: Show Captcha
+showcaptcha.chooser.title = jDownloader :: Zeige Captcha
 sys.ask.rlyclose = Wollen Sie jDownloader wirklich schließen?
 sys.dlc.success = DLC Erstellung erfolgreich. Entpacken testen?
 sys.message.welcome = Besuche uns auf http://jdownloader.org
