--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -6,7 +6,7 @@ addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
 addons.jdshutdown.menu.disable = Herunterfahren deaktivieren
 addons.jdshutdown.menu.enable = Herunterfahren aktivieren
 addons.jdshutdown.statusmessage.disabled = Das System wird nach dem Download NICHT heruntergefahren.
-addons.jdshutdown.statusmessage.enabled = Das System nach dem Download herunterfahren.
+addons.jdshutdown.statusmessage.enabled = Das System wird nach dem Download heruntergefahren.
 addons.schedule.menu.add = Hinzufügen
 addons.schedule.menu.close = Schließen
 addons.schedule.menu.create = Neu
@@ -313,7 +313,7 @@ gui.fengshuiconfig.general.tooltip = Zielordner und Sprache können hier eingest
 gui.fengshuiconfig.languages.restartwarning = Für eine Sprachänderung muss JDownloader neu gestartet werden. Jetzt neu starten?
 gui.fengshuiconfig.plugin.host.tooltip = <html>Falls Sie einen Premiumaccount haben können Sie hier Benutzerdaten<br> eingeben
 gui.fengshuiconfig.reconnect.tooltip = <html> Manchmal ist es nötig eine neue IP zu bekommen um Wartezeiten zu überspringen!
-gui.fengshuiconfig.routerip = Raouter-Ip
+gui.fengshuiconfig.routerip = Router-IP
 gui.fengshuiconfig.routername = Routername
 gui.fengshuiconfig.routerpassword = Passwort
 gui.fengshuiconfig.testsettings = Einstellungen testen
