--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -594,7 +594,7 @@ gui.treetable.header_5.progress = Fortschritt
 gui.treetable.packagestatus.links_active = aktiv
 gui.treetable.part.label = Datei
 gui.treetable.part.label_package = Paket
-gui.treetable.part.label_update = Aktuallisieren
+gui.treetable.part.label_update = Update
 gui.treetable.parts = Teil(e)
 gui.warning.reconnect.close = Fenster schließen
 gui.warning.reconnect.hasbeendisabled = Reconnect deaktiviert!
@@ -1054,7 +1054,7 @@ plugins.optional.webinterface.connections = Max. Verbindungen
 plugins.optional.webinterface.https = Use HTTPS
 plugins.optional.webinterface.loginname = Login Name
 plugins.optional.webinterface.loginpass = Login Passwort
-plugins.optional.webinterface.name = Web-Schnittstelle
+plugins.optional.webinterface.name = Webinterface
 plugins.optional.webinterface.needlogin = Authentifikation benötigt
 plugins.optional.webinterface.port = Port
 plugins.optional.webinterface.refresh = AutoRefresh
