--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -313,7 +313,7 @@ gui.fengshuiconfig.general.tooltip = Zielordner und Sprache können hier eingest
 gui.fengshuiconfig.languages.restartwarning = Für eine Sprachänderung muss JDownloader neu gestartet werden. Jetzt neu starten?
 gui.fengshuiconfig.plugin.host.tooltip = <html>Falls Sie einen Premiumaccount haben können Sie hier Benutzerdaten<br> eingeben
 gui.fengshuiconfig.reconnect.tooltip = <html> Manchmal ist es nötig eine neue IP zu bekommen um Wartezeiten zu überspringen!
-gui.fengshuiconfig.routerip = Router-IP
+gui.fengshuiconfig.routerip = Router-Ip
 gui.fengshuiconfig.routername = Routername
 gui.fengshuiconfig.routerpassword = Passwort
 gui.fengshuiconfig.testsettings = Einstellungen testen
