--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -181,7 +181,7 @@ gui.config.eventmanager.column.trigger = Trigger
 gui.config.eventmanager.column.triggerdesc = Trigger Description
 gui.config.eventmanager.name = Event Manager
 gui.config.eventmanager.new.selectaction.desc = Which action should be executed?
-gui.config.eventmanager.new.selectaction.title = Select action for "%s"
+gui.config.eventmanager.new.selectaction.title = Select action for '%s'
 gui.config.eventmanager.new.selecttrigger.desc = When should the action be executed?
 gui.config.eventmanager.new.selecttrigger.title = Select trigger
 gui.config.eventmanager.trigger.btn = Edit Trigger
@@ -720,7 +720,7 @@ interaction.simpleexecute.helplink = http://jdownloader.org/page.php?id=119
 interaction.simpleexecute.name = Execute Programm/Script
 interaction.simpleexecute.parameter = Parameter(1 parameter/line)
 interaction.simpleexecute.test = Execute now
-interaction.simpleexecute.useexecutein = Custumized "Execute in"
+interaction.simpleexecute.useexecutein = Custumized 'Execute in'
 interaction.simpleexecute.waitfortermination = Wait until command finished
 interaction.simpleexecute.waittime = Max. Execution time
 interaction.trigger.after_extract = After Extraction
@@ -828,7 +828,7 @@ plugins.decrypt.general.hosterselection = Hoster selection
 plugins.decrypt.general.passwordwrong = Wromg password
 plugins.decrypt.gwarezcc.preferdlc = Prefer DLC Container
 plugins.decrypt.linkbankeu = Check Mirror Links
-plugins.decrypt.myspacecom0 = Load all downloads into "myspace.com/"
+plugins.decrypt.myspacecom0 = Load all downloads into 'myspace.com/'
 plugins.decrypt.myspacecom1 = Create a subfolder for each artist
 plugins.decrypt.myspacecom2 = Put the myspace username as prefix to the filename of all downloads
 plugins.decrypt.passwordprotected = Links are protected. Please enter password:
@@ -855,7 +855,7 @@ plugins.host.meinupload.serverdefect = Service not available
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = The %s plugin does not support the Accountinfo feature yet.
 plugins.host.premium.info.files = Files
-plugins.host.premium.info.notvalid = The account for "%s" isn't valid! Please check username and password!\r\n%s
+plugins.host.premium.info.notvalid = The account for '%s' isn't valid! Please check username and password!\r\n%s
 plugins.host.premium.info.premiumpoints = PremiumPoints
 plugins.host.premium.info.status = Info
 plugins.host.premium.info.title = Accountinformation from %s for %s
